<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="GuessNumber"
            type="com.example.guessnumbernavigation.data.GuessNumber" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".iu.MainActivity"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        android:background="@color/white">


        <TextView
            android:id="@+id/tvTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tvTituloText"
            android:textFontWeight="@integer/material_motion_duration_long_1"
            android:textSize="@dimen/tvTituloTextSize"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/tvMarginTop"/>

        <EditText
            android:id="@+id/etNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/etNumberHint"
            android:inputType="number"
            android:padding="@dimen/etPadding"
            android:text="@string/etNumberText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvUsuarioPlayText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvUsuarioPlayText" />

                <TextView
                    android:id="@+id/tvUsuario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{GuessNumber.user}" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvIntentosEstablecidos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvIntentosEstablecidosText" />

                <TextView
                    android:id="@+id/tvIntentos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{GuessNumber.num}" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/tvResultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/etPadding"
            android:text="@string/tvResultadoText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tvMarginTop"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btComprobar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/btMarginTop"
                android:layout_weight="1"
                android:padding="@dimen/etPadding"
                android:text="@string/btComprobarText" />

            <Button
                android:id="@+id/btReintento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/btMarginTop"
                android:padding="@dimen/etPadding"
                android:text="@string/btReintento" />
        </LinearLayout>

    </LinearLayout>

</layout>