<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="GuessNumber"
            type="com.example.guessnumbernavigation.data.GuessNumber" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".iu.MainActivity"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        android:background="@color/white">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/tvMarginTop"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tvTituloText"
                android:textFontWeight="@integer/material_motion_duration_long_1"
                android:textSize="@dimen/tvTituloTextSize"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/tvMarginTop"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/etUserHint"
                android:inputType="text"
                android:padding="@dimen/etPadding"
                android:text="@={GuessNumber.user}" />

            <EditText
                android:id="@+id/etIntentos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/tvMarginTop"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/etIntentosHint"
                android:inputType="number"
                android:padding="@dimen/etPadding"
                android:text="@={GuessNumber.num}" />

            <Button
                android:id="@+id/btSendConfig"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/btMarginTop"
                android:layout_weight="1"
                android:onClick="sendMessage"
                android:padding="@dimen/etPadding"
                android:text="@string/btSendConfigText" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="@dimen/wrap_contentHeight"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="@dimen/ivQuestionSize"
                    android:layout_height="@dimen/ivQuestionSize"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/question" />
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</layout>